@@ -150,7 +150,7 @@ Mehr dazu auf der \textsf{XCSoar}-Homepage.
 \xcsoarwebsite{}
 \end{quote}
 
-Das beim Start von \textsf{XCSoar} erzeugte log-file \verb|xcsoar-startup.log| ist hilfreich für die Analyse von Fehlern und kann  
+Das beim Start von \textsf{XCSoar} erzeugte log-file \verb|xcsoar.log| ist hilfreich für die Analyse von Fehlern und kann  
 mit einem kleinen Bericht zu den Entwicklern gesendet werden, um Fehlern auf die Spur zu kommen 
 und \textsf{XCSoar} permanent zu verbessern. 
 
