@@ -180,7 +180,7 @@ Diese werden ebenfalls im \texttt{XCSoarData} Verzeichnis (Windows PC und Window
 Verzeichnis(Unix/LinuxPC) abgelegt. 
 
 Beim ersten Start wird {\textsf  XCSoar}  folgende Files erzeugen und anlegen: 
-\texttt{Default.tsk} (Standard Aufgabe),  \texttt{default.prf} (Konfigurationseinstellungen), \texttt{xcsoar-startup.log} 
+\texttt{Default.tsk} (Standard Aufgabe),  \texttt{default.prf} (Konfigurationseinstellungen), \texttt{xcsoar.log} 
 (Ein Log-Schrieb des Startprozesses von {\textsf  XCSoar}\dots), 
 
 
@@ -315,5 +315,3 @@ Bei PDA und PC-Version, kann {\textsf  XCSoar} vom Menü aus beendet werden. Hie
 
 Beim PC kann auch das ''normale'' Windows-Kreuz genutzt werden.
 Der \al wird heruntergefahren und damit {\textsf  XCSoar} geschlossen durch Drücken auf den PWR-Knopf für mehr als zwei Sekunden.
-
-
