@@ -119,7 +119,7 @@ information about the XCSoar mailing lists on our website:
 \end{quote}
 
 A log file of the startup progress of XCSoar is generated in the file
-\verb|xcsoar-startup.log|. This can be sent to the XCSoar developers
+\verb|xcsoar.log|. This can be sent to the XCSoar developers
 to help determine the cause of any startup related problems.
 
 For Altair users, the startup file is transferred to the `FromAltair'
