@@ -208,7 +208,7 @@ Windows Mobile devices), or the \texttt{.xcsoar} directory (Unix/Linux
 PC).  At first run, XCSoar will create the files 
 \texttt{Default.tsk} (Default Task),  \texttt{default.prf} 
 (configuration settings), \newline
-\texttt{xcsoar-startup.log} (log of the startup progress), 
+\texttt{xcsoar.log} (log of the startup progress), 
 plus three directories: \texttt{cache},
 \texttt{config} and \texttt{logs}.  Additional files may be
 created/modified while XCSoar is running, such as task files
@@ -335,4 +335,3 @@ on the XCSoar window.
 
 For Altair, XCSoar is shut down by holding the PWR button for two seconds or
 more.
-
