@@ -58,7 +58,7 @@ Vous pouvez aussi vous inscrire à la liste de mails de XCSoar afin d'être aver
 \xcsoarwebsite{/discover/mailinglist.html}
 \end{quote}
 
-Le fichier de "log" du démarrage du logiciel est \verb|xcsoar-startup.log|. Il peut être envoyé aux développeurs d'XCSoar pour les aider à déterminer les causes de problèmes au lancement du logiciel.
+Le fichier de "log" du démarrage du logiciel est \verb|xcsoar.log|. Il peut être envoyé aux développeurs d'XCSoar pour les aider à déterminer les causes de problèmes au lancement du logiciel.
 
 Pour les utilisateurs d'Altair le fichier de log est transféré vers le répertoire `FromAltair' à l'aide d'AltairSync si un support de stockage USB est connecté et qu'Altair est déjà sous tension.
 
@@ -113,4 +113,3 @@ Pour bien utiliser XCSoar vous devez:
 \item En vol, prendre l'habitude de regarder dehors autour de vous avant d'interagir avec le logiciel.
 \item Configurer le logiciel pour profiter des fonctionnalités automatisées pour minimiser les interactions avec le logiciel. Si vous vous apercevez que vous faites mécaniquement des actions fréquentes, demandez-vous (ou à un autre utilisateur de XCSoar) si le logiciel ne peut pas être configuré pour le faire à votre place.
 \end{itemize}
-              
